# simple-jax-to-tensorrt-example

./: .gitignore  CMakeLists.txt  README.md  jax_mnist_haiku.ipynb  jax_mnist_mlp.ipynb  mnist_inference.cpp
